comment out the security constraint to make the war a bit simplier

--- a/org.osgi.test.cases.webcontainer/resources/tw2/WebContent/WEB-INF/web.xml
+++ b/org.osgi.test.cases.webcontainer/resources/tw2/WebContent/WEB-INF/web.xml
@@ -275,7 +275,7 @@
 		<url-pattern>/HTTPSessionListenerServlet</url-pattern>
 	</servlet-mapping>
 	<!-- Define a Security Constraint on this Application -->
-	<security-constraint>
+	<!-- <security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Listener Servlet</web-resource-name>
 			<url-pattern>/SecurityTestServlet</url-pattern>
@@ -283,12 +283,12 @@
 		<auth-constraint>
 			<role-name>manager</role-name>
 		</auth-constraint>
-	</security-constraint>
+	</security-constraint> -->
 
 	<!-- Define the Login Configuration for this Application -->
-	<login-config>
+	<!-- <login-config>
 		<auth-method>BASIC</auth-method>
 		<realm-name>TestWar2 Application</realm-name>
-	</login-config>
+	</login-config> -->
 
 </web-app>
