--- a/org.osgi.test.cases.webcontainer.optional/.project
+++ b/org.osgi.test.cases.webcontainer.optional/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.test.cases.webcontainer.annotation</name>
+	<name>org.osgi.test.cases.webcontainer.optional</name>
 	<comment></comment>
 	<projects>
 	</projects>
