redo build structure of project to avoid custom ant task which require building with ant before testing the project is now built entirely with bnd

--- a/org.osgi.test.cases.webcontainer/resources/tw1/WEB-INF/web.xml
+++ b/org.osgi.test.cases.webcontainer/resources/tw1/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 	</servlet-mapping>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/404.html</location>
+		<location>/error404.html</location>
 	</error-page>
 
 
