--- a/org.osgi.test.cases.jndi.secure/.project
+++ b/org.osgi.test.cases.jndi.secure/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.test.cases.jndi</name>
+	<name>org.osgi.test.cases.jndi.secure</name>
 	<comment></comment>
 	<projects>
 		<project>cnf</project>
